--- a/_config.yml
+++ b/_config.yml
@@ -85,12 +85,12 @@ author:
   bio              : "Electrical Engineer, Virtual Reality Scientist and Teacher. Musician and Writer on my free time"
   location         : "Barcelona"
   employer         :
-  pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
-  googlescholar    : "http://yourfullgooglescholarurl.com"
+  pubmed           : # "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
+  googlescholar    : "https://scholar.google.com/citations?user=JOml1uEAAAAJ&hl=ca"
   email            :
   researchgate     :  # example: "https://www.researchgate.net/profile/yourprofile"
   uri              :
-  bitbucket        :
+  bitbucket        : 
   codepen          :
   dribbble         :
   flickr           :
@@ -102,7 +102,7 @@ author:
   instagram        :
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
-  linkedin         :
+  linkedin         : "https://www.linkedin.com/in/joanllobera"
   orcid            : "http://orcid.org/0000-0002-9471-1334"
   pinterest        :
   soundcloud       :
