added profile picture

--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Dr Joan Llobera"
-  avatar           : "profile.png"
+  avatar           : "joan_ski.jpg"
   bio              : "Electrical Engineer, Virtual Reality Scientist and Teacher. Musician and Writer on my free time"
   location         : "Barcelona"
   employer         :
