--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -7,7 +7,7 @@ main:
     url: /talks/    
 
   - title: "Courses"
-    url: /courses/    
+    url: /teaching/    
     
 #  - title: "Portfolio"
 #    url: /portfolio/
