--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,13 +1,15 @@
 # main links links
 main:
-#  - title: "Publications"
-#    url: /publications/
 
-  - title: "Talks"
-    url: /talks/    
+#  - title: "Talks"
+#    url: /talks/    
 
   - title: "Courses"
     url: /teaching/    
+
+  - title: "Publications"
+    url: /publications/
+
     
 #  - title: "Portfolio"
 #    url: /portfolio/
@@ -15,6 +17,6 @@ main:
 #  - title: "Blog Posts"
 #    url: /year-archive/
     
-#  - title: "CV"
-#    url: /cv/
+  - title: "CV"
+    url: /cv/
 
